[gd_scene load_steps=2 format=3 uid="uid://optionsmenu001"]

[ext_resource type="Script" path="res://src/ui/menus/options_menu.gd" id="1_options"]

[node name="OptionsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_options")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.5)

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -200.0
offset_right = 200.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="TitleLabel" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Options"
horizontal_alignment = 1

[node name="MasterVolume" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/MasterVolume"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "Master"

[node name="HSlider" type="HSlider" parent="PanelContainer/VBoxContainer/MasterVolume"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
max_value = 1.0
step = 0.05
value = 1.0

[node name="SFXVolume" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/SFXVolume"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "SFX"

[node name="HSlider" type="HSlider" parent="PanelContainer/VBoxContainer/SFXVolume"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
max_value = 1.0
step = 0.05
value = 1.0

[node name="MusicVolume" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/MusicVolume"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "Music"

[node name="HSlider" type="HSlider" parent="PanelContainer/VBoxContainer/MusicVolume"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
max_value = 1.0
step = 0.05
value = 1.0

[node name="Fullscreen" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/Fullscreen"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "Fullscreen"

[node name="CheckBox" type="CheckBox" parent="PanelContainer/VBoxContainer/Fullscreen"]
layout_mode = 2

[node name="BackButton" type="Button" parent="PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
text = "Back"
